SearchActivity has widgets for all three search categories

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_shelter_list">ShelterListActivity</string>
     <string name="title_activity_shelter_detail">ShelterDetailActivity</string>
     <string name="title_activity_search">SearchActivity</string>
+    <string name="title_activity_filtered_shelters">FilteredSheltersActivity</string>
 </resources>
