Map for the full list of shelters pulls up from MainActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_shelter_detail">ShelterDetailActivity</string>
     <string name="title_activity_search">SearchActivity</string>
     <string name="title_activity_filtered_shelters">FilteredSheltersActivity</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
